--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 </ul>
               </nav>
               <div class="sidebar">
-                <h1>Jonathan Abad | <span class="webdev">Web Developer</span></h1>
+                <h1>Jonathan Abad | <span class="webdev">Software Engineer</span></h1>
                 
                 <div class="social-icons">
                   <a href="https://twitter.com/JayyAbad"><i class="fab fa-twitter"></i></a>
